# riscv-paper-experiments

./: .clang-format  .gitattributes  .gitignore  .gitmodules  Makefile  Makefile.xdsl  README.md  Snakefile  default.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  test.sh  truth.txt  xdsl_commit.txt
alexnet/: flow.mlir  input.mlir  iree.mlir  requirements.txt  run.sh  test.py
benchmarks/: README.md  lower_mlir.sh  polybench_lower_mlir.sh  simple_lower_mlir.sh
docker/: Dockerfile  README.md  default.hjson  entrypoint.sh  fdiv.hjson  snitch_cfg.json  venv.sh
kernels/: .gitignore  Makefile  Makefile.folders  Makefile.kernels  Makefile.mlir.rules  Snakefile  bug.txt  cycles.csv  debug.txt  default.yaml  gendatautils.py  generate_params.py  generate_params_csv.sh  generate_tests.py  generate_tests_csv.sh  kernels.all.csv  kernels.csv  kernels.fast.csv  megalinalg.mlir  megalinalg2.mlir  optimization_passes.txt  pipeline.fast.csv  pivoted.all.csv  pivoted.csv  pivoted.fast.csv  pivoted_fpu.all.csv  pivoted_fpu.csv  pivoted_fpu.fast.csv  pivoted_ipc.all.csv  pivoted_ipc.csv  pivoted_ipc.fast.csv  regalloc.fast.jsonl
nn_xdsl/: README.md  requirements.txt
plots-cgo2025-ae/: cycles.py  data.py  fp_throughput.py  fpu.py  heatmap.py  low_level_representation.py  max_util.py  opt_pipeline.py  pass_improvements.py  pass_improvements_stacked.py  plot.py  plot.sh  plot_exp.py  plot_utils.py  regalloc.py  throughput.py
plots-mia-thesis/: data.py  fpu.py  plot_exp.py  plot_exp_accuracy.py  plot_exp_accuracy_cf.py  plot_exp_accuracy_chebyshev.py  plot_exp_macro.py  (+7 more)
(+4721 files in other folders)
