[project]
name = "riscv-paper-experiments"
version = "0.1.0"
description = "RISC-V paper experiments (Snitch toolchain, xDSL pipelines)"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "seaborn",
    "numpy",
    "snakemake==8.14.0",
    "xdsl @ git+https://github.com/szerdick/xdsl.git@8d125ca6f1b749bfceec62e14964af2e8c300ec4",
]
