[project]
name = "riscv-paper-experiments"
version = "0.1.0"
description = "RISC-V paper experiments (Snitch toolchain, xDSL pipelines)"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "seaborn",
    "numpy",
    "snakemake==8.14.0",
    "xdsl @ git+https://github.com/szerdick/xdsl.git@61c69d5f716f441109fc04fea19ac99c62a2c844",
]
