[project]
name = "riscv-paper-experiments"
version = "0.1.0"
description = "RISC-V paper experiments (Snitch toolchain, xDSL pipelines)"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "seaborn",
    "numpy",
    "snakemake==8.14.0",
    "xdsl @ git+https://github.com/szerdick/xdsl.git@0e467f528fc9254e5c116c7aa51e87cead2c3b41",
]
